--- a/ff-node2-monitor.service
+++ b/ff-node2-monitor.service
@@ -5,9 +5,9 @@ After=postgresql.service
 
 [Service]
 Environment=ROCKET_ENV=production
-WorkingDirectory=/opt/ff-node-monitor/src
-ExecStart=/opt/ff-node-monitor/src/target/release/ff-node-monitor
-User=ff-node-monitor
+WorkingDirectory=/opt/ff-node2-monitor/src
+ExecStart=/opt/ff-node2-monitor/src/target/release/ff-node-monitor
+User=ff-node2-monitor
 Restart=on-failure
 
 [Install]
